fix auto-sizing being too big sometimes

--- a/videoproof.css
+++ b/videoproof.css
@@ -358,6 +358,7 @@ ul.sidebar-list a:hover {
 	min-width: 1em;
 /* 	font: inherit; */
 	text-align: left;
+	margin-right: 0.3em;
 }
 
 
